# visiobas-gateway

./: .coverage  .gitignore  Dockerfile  Dockerfile.old  MANIFEST.in  README.md  SECURITY.md  __init__.py  __main__.py  docker-compose.modbus-sim.yaml  docker-compose.mutli-stage.yaml  docker-compose.yaml  http_config.env.template  http_config_template.env  install.panel.sh  install.sh  mypy.ini  properties.md  pyproject.toml  requirements.gateway.txt  requirements.panel.txt  requirements.txt  run.py  run_simulation.py  setup.gateway.py  setup.panel.py  setup.py  update.sh
.github/workflows/: checks.yml  codeql-analysis.yml  docker-develop.yml  docker-image.yml  docker-release.yml
config/: gateway.yaml  template-http.yaml  template-mqtt.yaml  template.env
config/templates/: api.env  gateway.env  log.env
docs/: __main__.py  bacnet.BACnetObj.yml  bacnet.BACnetObjPropertyList.yml  bacnet.BaseBACnetObj.yml  bacnet.BaseBACnetObjPropertyList.yml  bacnet.DeviceObj.yml  bacnet.SerialDevicePropertyList.yml  bacnet.StatusFlags.yml  bacnet.TcpDevicePropertyList.yml  bacnet.TcpIpDevicePropertyList.yml  generate.py  modbus.DeviceRtuProperties.yml  modbus.ModbusObj.yml  modbus.ModbusSerialDeviceObj.yml  modbus.ModbusTCPDeviceObj.yml  modbus.ModbusTcpDevicePropertyList.yml  modbus.SerialDevicePropertyList.yml  properties.md  properties_ru.md
gateway/: Dockerfile  __init__.py  __main__.py  gateway_.py  gateway_loop.py  panel_.py  requirements.txt  run.py  verifier.py
gateway/api/: __init__.py  app.py  base_view.py  schema.py  service.py
gateway/clients/: __init__.py  http_.py  mqtt.py
gateway/config/: gateway.env  gateway.json  gateway.yaml  http-template.yaml  http.env  template-http.yaml  template-mqtt.yaml
gateway/connector/: __init__.py
gateway/connectors/: __init__.py  base_connector.py
gateway/devices/: __init__.py  async_device.py  async_modbus.py  bacnet.py  base_device.py  base_modbus.py  base_polling_device.py  sunapi_device.py  sync_modbus.py  xnp_6550_rh.py
gateway/gateway/: visio_gateway.py
gateway/gw/: __init__.py  http_client.py  verifier.py
gateway/http/: __init__.py
gateway/http_/: __init__.py  client.py
gateway/logs/: __init__.py
gateway/models/: __init__.py  bacnet.py  modbus.py  protocol.py
gateway/mqtt/: __init__.py
gateway/panel/: __init__.py  __main__.py  mqtt.yaml  panel_.py
gateway/utils/: __init__.py  decorators.py  identifier.py  log.py  log_extra_formatter.py  log_file.py  naming.py  network.py  number.py  utils.py
gateway/verifier/: __init__.py  verifier.py
logs/: __init__.py
panel/: __init__.py  __main__.py  panel.py
panel/config/: i2c.yaml
run/: __init__.py  git_update.sh  gtw_installer.py  install.py  install.sh  logs_clear.sh  restart.sh  start.py  update.sh  visiobas_gateway.service
test/: test_verifier.py
test/modbus/: client.py  docker-compose.yaml  run_simulation.py  server.py  test_modbus_client.py  test_modbus_server.py
test/test_modbus/: test_modbus_server.py
test/verifier/: to_str.py
tests/: conftest.py  test_verifier.py
tests/bacnet/: priority_array.py
tests/modbus/: client.py  server.py
tests/models/: device_obj.py  modbus.py  modbus_obj.py  modbus_rtu_device.py
tests/test_client/: test_base_client.py  test_http_.py
tests/test_devices/: test_base_device.py
tests/test_schemas/: test_protocol.py  test_serial_port.py
tests/test_utils/: test_identifier.py  test_network.py  test_number.py
tests/verifier/: to_str.py  verify.py  verify_sf.py
vb-gateway/: Dockerfile  run.py
vb-gateway/gateway/: visio_client.py  visio_gateway.py
vb-mqtt/: Dockerfile  run.py  run.sh
vb_gateway/: Dockerfile  docker-compose.yaml  requirements.txt  run.py
vb_gateway/config/: gateway.json
vb_gateway/connectors/: __init__.py  base_connector.py  utils.py
vb_gateway/gateway/: http_client.py  verifier.py  visio_gateway.py
vb_gateway/logs/: __init__.py  vb_gateway.gateway.http_client.log.1
vb_gateway/utility/: utility.py
vb_gateway/utils/: __init__.py
vb_mqtt/: Dockerfile
visiobas_gateway/: Dockerfile  __init__.py  __main__.py  gateway.py  gateway_.py  run.py  verifier.py
visiobas_gateway/api/: __init__.py  app.py  base_view.py  schema.py
visiobas_gateway/clients/: __init__.py  base_client.py  http_.py  mqtt.py
visiobas_gateway/config/: gateway.json
visiobas_gateway/connectors/: connector.py
visiobas_gateway/devices/: __init__.py  _bacnet_coder_mixin.py  _base_device.py  _base_modbus.py  _base_polling_device.py  _interface.py  _modbus_coder_mixin.py  async_modbus.py  bacnet.py  base_device.py  base_modbus.py  base_polling_device.py  modbus.py  sunapi.py  sunapi_device.py  sync_modbus.py
visiobas_gateway/gateway/: exceptions.py  visio_client.py  visio_gateway.py
visiobas_gateway/models/: __init__.py
visiobas_gateway/schemas/: __init__.py  cmd_output.py  protocol.py  secret_url.py  send_methods.py  serial_port.py
visiobas_gateway/utils/: __init__.py  identifier.py  log.py  monitor.py  network.py  (+1 more)
(+232 files in other folders)
