[tool.poetry]
name = "visiobas-gateway"
version = "3.2.5"
description = "Polling devices using various protocols and transmitting data to the VisioBAS system"
repository = "https://github.com/NPPElement/visiobas-gateway"
keywords = ["VisioBAS", "Gateway", "BACnet", "Modbus"]
authors = ["Matvey Ovtsin <mtovtsin@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4.post0"
aiojobs = "^0.3.0"
aiohttp-jsonrpc = "^0.3.0"
aiohttp-cors = "^0.7.0"
paho-mqtt = "^1.5.1"
pydantic = "^1.8.2"
pymodbus = "^2.5.2"
BAC0 = "^21.2.25"

[tool.poetry.dev-dependencies]
mypy = "*"
isort = "^5.0.5"
black = "*"
pylint = "^2.9.6"
flake8 = "*"
taskipy = "*"

[tool.taskipy.tasks]
check = """
isort .\
 && black .\
 && flake8 gateway\
 && mypy gateway\
 && pylint gateway\
"""

[tool.black]
line-length = 92
target_version = ['py39']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \venv
    | \.mypy_cache
    | tests
  )/
)
'''

[tool.isort]
line_length = 92
profile = "black"
skip = [".venv", "tests"]

[tool.pylint.format]
max-line-length = 92

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
